tests/ui/ferrocene/compiler-arguments/upper_c_linker-flavor/upper_c_linker-flavor_empty.rs
//@ check-fail
//@ compile-flags: -Clinker-flavor
//~? ERROR requires one of

fn main() {}

// ferrocene-annotations: um_rustc_C_linker_flavor
